terraform/set-pattern/resource/aws_instance/01/tera_vpc_igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name        = "igw"
  }
}
